--- a/RayTracer/Views/SegmentedControlTableViewCell.xib
+++ b/RayTracer/Views/SegmentedControlTableViewCell.xib
@@ -12,15 +12,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="IntensityTableViewCell" customModule="RayTracer" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="SegmentedControlTableViewCell" customModule="RayTracer" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Intensity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dn5-4r-8M9">
-                        <rect key="frame" x="16" y="-0.5" width="66" height="44"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dn5-4r-8M9">
+                        <rect key="frame" x="16" y="-0.5" width="42" height="44"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="44" id="CcU-EF-gFA"/>
                         </constraints>
@@ -36,7 +36,7 @@
                             <segment title="High"/>
                         </segments>
                         <connections>
-                            <action selector="intensityControlValueChanged:" destination="KGk-i7-Jjw" eventType="valueChanged" id="ivE-zZ-k7u"/>
+                            <action selector="segmentedControlValueChanged:" destination="KGk-i7-Jjw" eventType="valueChanged" id="6ns-Pp-0vp"/>
                         </connections>
                     </segmentedControl>
                 </subviews>
@@ -50,8 +50,8 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="intensityControl" destination="bSk-Vv-kZa" id="Vp9-2N-Z0r"/>
-                <outlet property="titleLabel" destination="dn5-4r-8M9" id="iK7-f3-nLt"/>
+                <outlet property="segmentedControl" destination="bSk-Vv-kZa" id="HET-jB-Rhl"/>
+                <outlet property="titleLabel" destination="dn5-4r-8M9" id="9pg-rh-We7"/>
             </connections>
         </tableViewCell>
     </objects>
