--- a/RayTracer/Views/FrameSizeTableViewCell.xib
+++ b/RayTracer/Views/FrameSizeTableViewCell.xib
@@ -16,7 +16,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="123"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="122.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="123"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tcg-m1-zb2">
@@ -79,16 +79,16 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="g98-tp-MSg">
                                         <rect key="frame" x="80" y="0.0" width="179" height="75"/>
                                         <subviews>
-                                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1000" minValue="20" maxValue="1000" translatesAutoresizingMaskIntoConstraints="NO" id="VFb-aq-c8U">
+                                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1000" minValue="100" maxValue="1000" translatesAutoresizingMaskIntoConstraints="NO" id="VFb-aq-c8U">
                                                 <rect key="frame" x="-2" y="0.0" width="183" height="38.5"/>
                                                 <connections>
-                                                    <action selector="sliderValueChanged:" destination="KGk-i7-Jjw" eventType="valueChanged" id="V6g-Qd-wDI"/>
+                                                    <action selector="sliderValueChanged:" destination="KGk-i7-Jjw" eventType="valueChanged" id="opL-5u-ij4"/>
                                                 </connections>
                                             </slider>
-                                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1000" minValue="20" maxValue="1000" translatesAutoresizingMaskIntoConstraints="NO" id="akl-Uj-XQQ">
+                                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1000" minValue="100" maxValue="1000" translatesAutoresizingMaskIntoConstraints="NO" id="akl-Uj-XQQ">
                                                 <rect key="frame" x="-2" y="37.5" width="183" height="38.5"/>
                                                 <connections>
-                                                    <action selector="sliderValueChanged:" destination="KGk-i7-Jjw" eventType="valueChanged" id="qRg-RM-0LA"/>
+                                                    <action selector="sliderValueChanged:" destination="KGk-i7-Jjw" eventType="valueChanged" id="XQM-b7-A88"/>
                                                 </connections>
                                             </slider>
                                         </subviews>
